// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instant deposit button and modal button renders correctly with balance 1`] = `
<div>
  <button
    class="components-button is-secondary is-button is-default"
    type="button"
  >
    Instant deposit
  </button>
</div>
`;

exports[`Instant deposit button and modal button renders correctly with zero balance 1`] = `
<div>
  <button
    class="components-button is-secondary is-button is-default"
    disabled=""
    type="button"
  >
    Instant deposit
  </button>
</div>
`;

exports[`Instant deposit button and modal modal renders correctly 1`] = `
<div
  aria-labelledby="components-modal-header-0"
  class="components-modal__frame wcpay-instant-deposits-modal"
  role="dialog"
  tabindex="-1"
>
  <div
    class="components-modal__content"
    tabindex="0"
  >
    <div
      class="components-modal__header"
    >
      <div
        class="components-modal__header-heading-container"
      >
        <h1
          class="components-modal__header-heading"
          id="components-modal-header-0"
        >
          Instant deposit
        </h1>
      </div>
      <button
        aria-label="Close dialog"
        class="components-button components-icon-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="dashicon dashicons-no-alt"
          focusable="false"
          height="20"
          role="img"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.95 6.46L11.41 10l3.54 3.54-1.41 1.41L10 11.42l-3.53 3.53-1.42-1.42L8.58 10 5.05 6.47l1.42-1.42L10 8.58l3.54-3.53z"
          />
        </svg>
      </button>
    </div>
    <p>
      Need cash in a hurry? Instant deposits are available within 30 minutes for a nominal 1.5% service fee. 
      <a
        href="https://docs.woocommerce.com/document/payments/instant-deposits/"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn more
      </a>
    </p>
    <ul>
      <li
        class="wcpay-instant-deposits-modal__balance"
      >
        Balance available for instant deposit: 
        <span>
          $123.45
        </span>
      </li>
      <li
        class="wcpay-instant-deposits-modal__fee"
      >
        1.5% service fee: 
        <span>
          -
          $1.23
        </span>
      </li>
      <li
        class="wcpay-instant-deposits-modal__net"
      >
        Net deposit amount: 
        <span>
          $122.22
        </span>
      </li>
    </ul>
    <button
      class="components-button is-button is-primary"
      type="button"
    >
      Deposit $122.22 now
    </button>
  </div>
</div>
`;
